# svg-rendering

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.cmd  sump.txt  test.cmd  testing
docs/: _application_8h.html  _application_8h__incl.map  _application_8h__incl.md5  _application_8h_source.html  _arc_path_point_8h.html  _arc_path_point_8h__incl.map  _arc_path_point_8h__incl.md5  _arc_path_point_8h_source.html  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _circle_8h.html  _circle_8h__incl.map  _circle_8h__incl.md5  _circle_8h_source.html  _cubic_path_point_8h.html  _cubic_path_point_8h__incl.map  _cubic_path_point_8h__incl.md5  _cubic_path_point_8h_source.html  _element_8h.html  _element_8h__dep__incl.md5  _element_8h__incl.map  _element_8h__incl.md5  _element_8h_source.html  _element_type_8h.html  _element_type_8h.js  _element_type_8h__incl.map  _element_type_8h__incl.md5  _element_type_8h_source.html  _ellipse_8h.html  _ellipse_8h.js  _ellipse_8h__dep__incl.md5  _ellipse_8h__incl.map  _ellipse_8h__incl.md5  _ellipse_8h_source.html  _file_manager_8h.html  _file_manager_8h.js  (+381 more)
docs/html/: _arc_path_point_8h.js  _arc_path_point_8h_source.html  _camera_8h__incl.md5  _circle_8h.js  _cubic_path_point_8h.html  _cubic_path_point_8h.js  _element_8h.html  _element_8h.js  _element_8h__dep__incl.map  _element_8h__dep__incl.md5  _element_8h__incl.md5  _element_8h_source.html  _element_type_8h.html  _element_type_8h_source.html  (+177 more)
old/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
src/: Application.cpp  Application.h  Graphic.h  Renderer.cpp  Renderer.h  XMLParser.cpp  XMLParser.h  main.cpp  output.puml
test/: Gradient_Ellipse_Utils.cpp  Polygon_Drawing_Helper.cpp  Scissor_Test_Example.cpp  concave_polygon_ear_clipping_drawing.cpp  drawEllipse.cpp  drawInTitleBar.cpp  fileList.cpp  fileListOriginal.cpp  gdi_polygon.cpp  gdiplus_animation.cpp  gdiplus_background.cpp  gdiplus_button.cpp  gdiplus_clip.cpp  gdiplus_custom_gradient.cpp  gdiplus_draw_at_mouse.cpp  gdiplus_dropfile.cpp  gdiplus_menu.cpp  gdiplus_menu_show_up_when_click_title_bar.cpp  gdiplus_popup.cpp  gdiplus_popup_notification.cpp  memory_leak_test.cpp  mouseGesture.cpp  openFileDialog.cpp  parserTest.cpp  ray_gradientellipse_shader.cpp  render_texture_rotatedclipping_example.cpp  rotate_screen_shader.cpp  scan_fill_algorithm.cpp  scissor_dragrotate_texture.cpp  scissordragrotateutils.cpp  texture_brush.cpp  texture_brush2.cpp  texture_brush_radial.cpp  texture_test.cpp  texture_test2.cpp  toto  viewbox_render_texture.cpp  viewbox_test.cpp  viewbox_texture_test2.cpp
(+404 files in other folders)
